<resources>
    <string name="app_name">Turkish Songs</string>
    <string name="songs">Songs</string>
    <string name="about_us">About us</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="programer_ahmad_rozogar_1403_5_10">Programer: Ahmad Rozogar 1403/5/10</string>
    <string name="song_01">Song 01</string>
    <string name="song_02">Song 02</string>
    <string name="song_03">Song 03</string>
    <string name="song_04">Song 04</string>
    <string name="song_05">Song 05</string>
    <string name="song_06">Song 06</string>
    <string name="song_07">Song 07</string>
    <string name="song_08">Song 08</string>
    <string name="song_09">Song 09</string>
    <string name="song_10">Song 10</string>
    <string name="song_11">Song 11</string>
    <string name="song_12">Song 12</string>
    <string name="song_13">Song 13</string>
    <string name="song_14">Song 14</string>
    <string name="song_15">Song 15</string>
    <string name="song_16">Song 16</string>
    <string name="song_17">Song 17</string>
    <string name="song_18">Song 18</string>
</resources>