<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/showpicc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <Button
        android:id="@+id/btnpree"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"

        android:text="@string/previous"
        android:textAllCaps="false"
        android:background="#1a7592"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnplay"
        app:layout_constraintTop_toBottomOf="@+id/seek" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="77dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:background="#1a7592"
        android:textColor="#000000"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btnplay"
        app:layout_constraintTop_toBottomOf="@+id/seek" />

    <Button
        android:id="@+id/btnplay"
        android:layout_width="82dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:background="#1a7592"
        android:textColor="#000000"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="337dp"
        android:layout_height="256dp"
        android:layout_marginTop="68dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splashpicture"/>

    <SeekBar
        android:id="@+id/seek"
        android:layout_width="236dp"
        android:layout_height="17dp"
        android:layout_marginTop="28dp"
        android:background="#1a7592"
        android:foregroundTint="#D30E0E"
        android:progress="0"
        android:progressTint="#C33939"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="277dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:background="#1a7592"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/txtstart"
        android:layout_width="41dp"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:text="00:00"
        android:textAlignment="center"
        android:background="#1a7592"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/seek"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txtendtime"
        android:layout_width="41dp"
        android:layout_height="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="00:00"
        android:background="#1a7592"
        android:textColor="#000000"
        android:textAlignment="center"

        app:layout_constraintStart_toEndOf="@+id/seek"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

</androidx.constraintlayout.widget.ConstraintLayout>